--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 ## User settings
 xcuserdata/
 FlatHub.xcodeproj/project.xcworkspace/xcuserdata
+FlatHub.xcodeproj/xcuserdata
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
